# blog-api

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: .coveragerc  .env.example  .flake8  manage.py
app/accounts/: models.py  serializers.py  urls.py  views.py
app/accounts/migrations/: 0001_initial.py
app/blog/: models.py  urls.py  views.py
app/project/: pytest.ini
app/project/blog/migrations/: 0001_initial.py
app/project/project/: settings.py  wsgi.py
app/project/scripts/: send.py
app/project/settings/: base.py  develop.py  testing.py
app/project/tests/: test_comments.py  test_reset_password.py
app/scripts/: seed_db.py
app/tests/: conftest.py  test_categories.py  test_profile.py  test_signup.py
docker/: Dockerfile  docker-compose.yml
images/: schema.drawio
project/: pytest.ini
project/accounts/: models.py  serializers.py  urls.py  validators.py  views.py
project/accounts/migrations/: 0001_initial.py
project/blog/: models.py  permissions.py  serializers.py  urls.py  views.py
project/blog/migrations/: 0001_initial.py  0002_alter_category_options_alter_comment_options_and_more.py  0003_alter_category_name_alter_comment_text_and_more.py
project/blog/tests/: conftest.py  helpers.py  test_categories.py  test_comments.py  test_models.py  test_posts.py  test_profile.py  test_signup.py
project/project/: settings.py  urls.py
project/scripts/: seed_db.py
project/snippets/: helpers.py
project/tests/: helpers.py  test_api_root.py  test_models.py  test_posts.py
(+2 files in other folders)
